@@ -5,14 +5,13 @@ import static java.nio.file.StandardCopyOption.REPLACE_EXISTING;
 import java.io.*;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.*;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.StandardCopyOption;
 import java.time.ZonedDateTime;
-import java.util.Collection;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.UUID;
+import java.util.*;
 import java.util.concurrent.*;
+import java.util.function.Predicate;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
@@ -49,6 +48,27 @@ public class FileService implements DisposableBean {
     private final Map<Path, ScheduledFuture<?>> futures = new ConcurrentHashMap<>();
 
     private final ScheduledExecutorService executor = Executors.newScheduledThreadPool(Runtime.getRuntime().availableProcessors());
+
+    /**
+     * Filenames for which the template filename differs from the filename it should have in the repository.
+     */
+    // @formatter:off
+    private static final Map<String, String> FILENAME_REPLACEMENTS = Map.ofEntries(
+        Map.entry("git.ignore.file", ".gitignore"),
+        Map.entry("git.attributes.file", ".gitattributes"),
+        Map.entry("Makefile.file", "Makefile"),
+        Map.entry("dune.file", "dune"),
+        Map.entry("Fast.file", "Fastfile"),
+        Map.entry("App.file", "Appfile"),
+        Map.entry("Scan.file", "Scanfile"),
+        Map.entry("gradlew.file", "gradlew")
+    );
+    // @formatter:on
+
+    /**
+     * These directories get falsely marked as files and should be ignored during copying.
+     */
+    private static final List<String> IGNORED_DIRECTORIES = List.of(".xcassets/", ".colorset/", ".appiconset/", ".xcworkspace/", ".xcodeproj/", ".swiftpm/");
 
     @Override
     public void destroy() {
@@ -133,7 +153,7 @@ public class FileService implements DisposableBean {
         if (newFilePath != null && newFilePath.contains("files/temp")) {
             // rename and move file
             try {
-                Path source = Paths.get(actualPathForPublicPath(newFilePath));
+                Path source = Path.of(actualPathForPublicPath(newFilePath));
                 File targetFile = generateTargetFile(newFilePath, targetFolder, keepFileName);
                 Path target = targetFile.toPath();
                 Files.move(source, target, REPLACE_EXISTING);
@@ -159,24 +179,24 @@ public class FileService implements DisposableBean {
 
         // check for known path to convert
         if (publicPath.contains("files/temp")) {
-            return Paths.get(FilePathService.getTempFilePath(), filename).toString();
+            return Path.of(FilePathService.getTempFilePath(), filename).toString();
         }
         if (publicPath.contains("files/drag-and-drop/backgrounds")) {
-            return Paths.get(FilePathService.getDragAndDropBackgroundFilePath(), filename).toString();
+            return Path.of(FilePathService.getDragAndDropBackgroundFilePath(), filename).toString();
         }
         if (publicPath.contains("files/drag-and-drop/drag-items")) {
-            return Paths.get(FilePathService.getDragItemFilePath(), filename).toString();
+            return Path.of(FilePathService.getDragItemFilePath(), filename).toString();
         }
         if (publicPath.contains("files/course/icons")) {
-            return Paths.get(FilePathService.getCourseIconFilePath(), filename).toString();
+            return Path.of(FilePathService.getCourseIconFilePath(), filename).toString();
         }
         if (publicPath.contains("files/attachments/lecture")) {
             String lectureId = publicPath.replace(filename, "").replace("/api/files/attachments/lecture/", "");
-            return Paths.get(FilePathService.getLectureAttachmentFilePath(), lectureId, filename).toString();
+            return Path.of(FilePathService.getLectureAttachmentFilePath(), lectureId, filename).toString();
         }
         if (publicPath.contains("files/attachments/attachment-unit")) {
             String attachmentUnitId = publicPath.replace(filename, "").replace("/api/files/attachments/attachment-unit/", "");
-            return Paths.get(FilePathService.getAttachmentUnitFilePath(), attachmentUnitId, filename).toString();
+            return Path.of(FilePathService.getAttachmentUnitFilePath(), attachmentUnitId, filename).toString();
         }
         if (publicPath.contains("files/file-upload-exercises")) {
             final var uploadSubPath = publicPath.replace(filename, "").replace("/api/files/file-upload-exercises/", "").split("/");
@@ -187,7 +207,7 @@ public class FileService implements DisposableBean {
             }
             final var exerciseId = Long.parseLong(shouldBeExerciseId);
             final var submissionId = Long.parseLong(shouldBeSubmissionId);
-            return Paths.get(FileUploadSubmission.buildFilePath(exerciseId, submissionId), filename).toString();
+            return Path.of(FileUploadSubmission.buildFilePath(exerciseId, submissionId), filename).toString();
         }
 
         // path is unknown => cannot convert
@@ -203,7 +223,7 @@ public class FileService implements DisposableBean {
      */
     public String publicPathForActualPath(String actualPath, @Nullable Long entityId) {
         // first extract filename
-        String filename = Paths.get(actualPath).getFileName().toString();
+        String filename = Path.of(actualPath).getFileName().toString();
 
         // generate part for id
         String id = entityId == null ? Constants.FILEPATH_ID_PLACEHOLDER : entityId.toString();
@@ -228,7 +248,7 @@ public class FileService implements DisposableBean {
             return "/api/files/attachments/attachment-unit/" + id + "/" + filename;
         }
         if (actualPath.contains(FilePathService.getFileUploadExercisesFilePath())) {
-            final var path = Paths.get(actualPath);
+            final var path = Path.of(actualPath);
             final long exerciseId;
             try {
                 // The last name is the file name, the one before that is the submissionId and the one before that is the exerciseId, in which we are interested
@@ -299,7 +319,7 @@ public class FileService implements DisposableBean {
                 filename = filenameBase + ZonedDateTime.now().toString().substring(0, 23).replaceAll("[:.]", "-") + "_" + UUID.randomUUID().toString().substring(0, 8) + "."
                         + fileExtension;
             }
-            var path = Paths.get(targetFolder, filename).toString();
+            var path = Path.of(targetFolder, filename).toString();
 
             newFile = new File(path);
             if (keepFileName && newFile.exists()) {
@@ -322,64 +342,63 @@ public class FileService implements DisposableBean {
      * @throws IOException if the copying operation fails.
      */
     public void copyResources(Resource[] resources, String prefix, String targetDirectoryPath, Boolean keepParentFolder) throws IOException {
-
         for (Resource resource : resources) {
-
             // Replace windows separator with "/"
             String fileUrl = java.net.URLDecoder.decode(resource.getURL().toString(), StandardCharsets.UTF_8).replaceAll("\\\\", "/");
             // cut the prefix (e.g. 'exercise', 'solution', 'test') from the actual path
             int index = fileUrl.indexOf(prefix);
+
             String targetFilePath = keepParentFolder ? fileUrl.substring(index + prefix.length()) : "/" + resource.getFilename();
-            // special case for '.git.ignore.file' file which would not be included in build otherwise
-            if (targetFilePath.endsWith("git.ignore.file")) {
-                targetFilePath = targetFilePath.replaceAll("git.ignore.file", ".gitignore");
-            }
-            // special case for '.gitattributes' file which would not be included in build otherwise
-            if (targetFilePath.endsWith("git.attributes.file")) {
-                targetFilePath = targetFilePath.replaceAll("git.attributes.file", ".gitattributes");
-            }
-            // special case for 'Makefile' files which would not be included in the build otherwise
-            if (targetFilePath.endsWith("Makefile.file")) {
-                targetFilePath = targetFilePath.replace("Makefile.file", "Makefile");
-            }
-            // special case for '.project' files which would not be included in the build otherwise
-            if (targetFilePath.endsWith("project.file")) {
-                targetFilePath = targetFilePath.replace("project.file", ".project");
-            }
-            // special case for '.classpath' files which would not be included in the build otherwise
-            if (targetFilePath.endsWith("classpath.file")) {
-                targetFilePath = targetFilePath.replace("classpath.file", ".classpath");
-            }
-            // special case for 'dune' files which would not be included in the build otherwise
-            if (targetFilePath.endsWith("dune.file")) {
-                targetFilePath = targetFilePath.replace("dune.file", "dune");
-            }
-            // special case for 'Fastfile' files which would not be included in the build otherwise
-            if (targetFilePath.endsWith("Fast.file")) {
-                targetFilePath = targetFilePath.replace("Fast.file", "Fastfile");
-            }
-            // special case for 'Appfile' files which would not be included in the build otherwise
-            if (targetFilePath.endsWith("App.file")) {
-                targetFilePath = targetFilePath.replace("App.file", "Appfile");
-            }
-            // special case for 'Scanfile' files which would not be included in the build otherwise
-            if (targetFilePath.endsWith("Scan.file")) {
-                targetFilePath = targetFilePath.replace("Scan.file", "Scanfile");
-            }
-            // special case for Xcode where directories get falsely scanned as files
-            if (targetFilePath.endsWith(".xcassets/") || targetFilePath.endsWith(".colorset/") || targetFilePath.endsWith(".appiconset/")
-                    || targetFilePath.endsWith(".xcworkspace/") || targetFilePath.endsWith(".xcodeproj/")) {
+            targetFilePath = applySpecialFilenameReplacements(targetFilePath);
+
+            if (isIgnoredDirectory(targetFilePath)) {
                 continue;
             }
 
-            Path copyPath = Paths.get(targetDirectoryPath + targetFilePath);
+            Path copyPath = Path.of(targetDirectoryPath + targetFilePath);
             File parentFolder = copyPath.toFile().getParentFile();
             if (!parentFolder.exists()) {
                 Files.createDirectories(parentFolder.toPath());
             }
 
             Files.copy(resource.getInputStream(), copyPath, StandardCopyOption.REPLACE_EXISTING);
+            // make gradlew executable
+            if (targetFilePath.endsWith("gradlew")) {
+                copyPath.toFile().setExecutable(true);
+            }
         }
+    }
+
+    /**
+     * Replaces filenames where the template name differs from the name the file should have in the repository.
+     *
+     * @param filePath The path to a file.
+     * @return The path with replacements applied where necessary.
+     */
+    private String applySpecialFilenameReplacements(final String filePath) {
+        String resultFilePath = filePath;
+
+        for (final Map.Entry<String, String> replacementDirective : FILENAME_REPLACEMENTS.entrySet()) {
+            String oldName = replacementDirective.getKey();
+            String newName = replacementDirective.getValue();
+
+            if (resultFilePath.endsWith(oldName)) {
+                resultFilePath = resultFilePath.replace(oldName, newName);
+                break;
+            }
+        }
+
+        return resultFilePath;
+    }
+
+    /**
+     * Checks if the given path has been identified as a file but it actually points to a directory.
+     *
+     * @param filePath The path to a file/directory.
+     * @return True, if the path is assumed to be a file but actually points to a directory.
+     */
+    private boolean isIgnoredDirectory(final String filePath) {
+        return IGNORED_DIRECTORIES.stream().anyMatch(filePath::endsWith);
     }
 
     /**
@@ -516,7 +535,7 @@ public class FileService implements DisposableBean {
 
         if (subDirectories != null) {
             for (String subDirectory : subDirectories) {
-                replaceVariablesInDirectoryName(Paths.get(directory.getAbsolutePath(), subDirectory).toString(), targetString, replacementString);
+                replaceVariablesInDirectoryName(Path.of(directory.getAbsolutePath(), subDirectory).toString(), targetString, replacementString);
             }
         }
     }
@@ -533,18 +552,20 @@ public class FileService implements DisposableBean {
         log.debug("Replacing {} with {} in directory {}", targetString, replacementString, startPath);
         File directory = new File(startPath);
         if (!directory.exists() || !directory.isDirectory()) {
-            throw new RuntimeException("Files in the directory " + startPath + " should be replaced but it does not exist.");
+            throw new FileNotFoundException("Files in the directory " + startPath + " should be replaced but it does not exist.");
         }
 
         // rename all files in the file tree
-        Files.find(Paths.get(startPath), Integer.MAX_VALUE, (filePath, fileAttr) -> fileAttr.isRegularFile() && filePath.toString().contains(targetString)).forEach(filePath -> {
-            try {
-                Files.move(new File(filePath.toString()).toPath(), new File(filePath.toString().replace(targetString, replacementString)).toPath());
-            }
-            catch (IOException e) {
-                throw new RuntimeException("File " + filePath + " should be replaced but does not exist.");
-            }
-        });
+        try (var files = Files.find(Path.of(startPath), Integer.MAX_VALUE, (filePath, fileAttr) -> fileAttr.isRegularFile() && filePath.toString().contains(targetString))) {
+            files.forEach(filePath -> {
+                try {
+                    Files.move(filePath, Path.of(filePath.toString().replace(targetString, replacementString)));
+                }
+                catch (IOException e) {
+                    throw new RuntimeException("File " + filePath + " should be replaced but does not exist.");
+                }
+            });
+        }
     }
 
     /**
@@ -557,6 +578,20 @@ public class FileService implements DisposableBean {
      * @throws IOException if an issue occurs on file access for the replacement of the variables.
      */
     public void replaceVariablesInFileRecursive(String startPath, Map<String, String> replacements) throws IOException {
+        replaceVariablesInFileRecursive(startPath, replacements, Collections.emptyList());
+    }
+
+    /**
+     * This replaces all occurrences of the target Strings with the replacement Strings in the given file and saves the file
+     * <p>
+     * {@link #replaceVariablesInFile(String, Map) replaceVariablesInFile}
+     *
+     * @param startPath     the path where the start directory is located
+     * @param replacements  the replacements that should be applied
+     * @param filesToIgnore the name of files for which no replacement should be done
+     * @throws IOException if an issue occurs on file access for the replacement of the variables.
+     */
+    public void replaceVariablesInFileRecursive(String startPath, Map<String, String> replacements, List<String> filesToIgnore) throws IOException {
         log.debug("Replacing {} in files in directory {}", replacements, startPath);
         File directory = new File(startPath);
         if (!directory.exists() || !directory.isDirectory()) {
@@ -566,8 +601,10 @@ public class FileService implements DisposableBean {
         // Get all files in directory
         String[] files = directory.list((current, name) -> new File(current, name).isFile());
         if (files != null) {
+            // filter out files that should be ignored
+            files = Arrays.stream(files).filter(Predicate.not(filesToIgnore::contains)).toArray(String[]::new);
             for (String file : files) {
-                replaceVariablesInFile(Paths.get(directory.getAbsolutePath(), file).toString(), replacements);
+                replaceVariablesInFile(Path.of(directory.getAbsolutePath(), file).toString(), replacements);
             }
         }
 
@@ -579,7 +616,7 @@ public class FileService implements DisposableBean {
                     // ignore files in the '.git' folder
                     continue;
                 }
-                replaceVariablesInFileRecursive(Paths.get(directory.getAbsolutePath(), subDirectory).toString(), replacements);
+                replaceVariablesInFileRecursive(Path.of(directory.getAbsolutePath(), subDirectory).toString(), replacements, filesToIgnore);
             }
         }
     }
@@ -595,7 +632,7 @@ public class FileService implements DisposableBean {
     public void replaceVariablesInFile(String filePath, Map<String, String> replacements) throws IOException {
         log.debug("Replacing {} in file {}", replacements, filePath);
         // https://stackoverflow.com/questions/3935791/find-and-replace-words-lines-in-a-file
-        Path replaceFilePath = Paths.get(filePath);
+        Path replaceFilePath = Path.of(filePath);
         Charset charset = StandardCharsets.UTF_8;
 
         String fileContent = Files.readString(replaceFilePath, charset);
@@ -641,7 +678,7 @@ public class FileService implements DisposableBean {
     public void normalizeLineEndings(String filePath) throws IOException {
         log.debug("Normalizing line endings in file {}", filePath);
         // https://stackoverflow.com/questions/3776923/how-can-i-normalize-the-eol-character-in-java
-        Path replaceFilePath = Paths.get(filePath);
+        Path replaceFilePath = Path.of(filePath);
         Charset charset = StandardCharsets.UTF_8;
 
         String fileContent = Files.readString(replaceFilePath, charset);
@@ -683,7 +720,7 @@ public class FileService implements DisposableBean {
      */
     public void convertToUTF8(String filePath) throws IOException {
         log.debug("Converting file {} to UTF-8", filePath);
-        Path replaceFilePath = Paths.get(filePath);
+        Path replaceFilePath = Path.of(filePath);
         byte[] contentArray = Files.readAllBytes(replaceFilePath);
 
         Charset charset = detectCharset(contentArray);
@@ -772,7 +809,7 @@ public class FileService implements DisposableBean {
      * @return the unique path, e.g. /opt/artemis/repos-download/1609579674868
      */
     public Path getUniquePath(String path) {
-        var uniquePath = Paths.get(path, String.valueOf(System.currentTimeMillis()));
+        var uniquePath = Path.of(path, String.valueOf(System.currentTimeMillis()));
         if (!Files.exists(uniquePath) && Files.isDirectory(uniquePath)) {
             try {
                 Files.createDirectories(uniquePath);
@@ -788,6 +825,7 @@ public class FileService implements DisposableBean {
      * Removes illegal characters for filenames from the string.
      *
      * See: https://stackoverflow.com/questions/15075890/replacing-illegal-character-in-filename/15075907#15075907
+     *
      * @param string the string with the characters
      * @return stripped string
      */
@@ -813,8 +851,8 @@ public class FileService implements DisposableBean {
     /**
      * Write a given string into a file at a given path
      *
-     * @param stringToWrite     The string that will be written into a file
-     * @param path              The path where the file will be written to
+     * @param stringToWrite The string that will be written into a file
+     * @param path          The path where the file will be written to
      * @return Path to the written file
      */
     public Path writeStringToFile(String stringToWrite, Path path) {
@@ -833,9 +871,9 @@ public class FileService implements DisposableBean {
     /**
      * Serialize an object and write into file at a given path
      *
-     * @param object        The object that is serialized and written into a file
-     * @param objectMapper  The objectMapper that is used for serialization
-     * @param path          The path where the file will be written to
+     * @param object       The object that is serialized and written into a file
+     * @param objectMapper The objectMapper that is used for serialization
+     * @param path         The path where the file will be written to
      * @return Path to the written file
      */
     public Path writeObjectToJsonFile(Object object, ObjectMapper objectMapper, Path path) {
@@ -881,6 +919,7 @@ public class FileService implements DisposableBean {
 
     /**
      * Deletes all specified files.
+     *
      * @param filePaths A list of all paths to the files that should be deleted
      */
     public void deleteFiles(List<Path> filePaths) {
