@@ -8,7 +8,6 @@ import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.ZonedDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
@@ -35,6 +34,7 @@ import de.tum.in.www1.artemis.domain.hestia.ProgrammingExerciseTask;
 import de.tum.in.www1.artemis.domain.participation.SolutionProgrammingExerciseParticipation;
 import de.tum.in.www1.artemis.domain.participation.TemplateProgrammingExerciseParticipation;
 import de.tum.in.www1.artemis.repository.*;
+import de.tum.in.www1.artemis.repository.hestia.ProgrammingExerciseGitDiffReportRepository;
 import de.tum.in.www1.artemis.repository.hestia.ProgrammingExerciseSolutionEntryRepository;
 import de.tum.in.www1.artemis.repository.hestia.ProgrammingExerciseTaskRepository;
 import de.tum.in.www1.artemis.service.AuthorizationCheckService;
@@ -98,6 +98,8 @@ public class ProgrammingExerciseService {
 
     private final ProgrammingExerciseTaskService programmingExerciseTaskService;
 
+    private final ProgrammingExerciseGitDiffReportRepository programmingExerciseGitDiffReportRepository;
+
     public ProgrammingExerciseService(ProgrammingExerciseRepository programmingExerciseRepository, FileService fileService, GitService gitService,
             Optional<VersionControlService> versionControlService, Optional<ContinuousIntegrationService> continuousIntegrationService,
             TemplateProgrammingExerciseParticipationRepository templateProgrammingExerciseParticipationRepository,
@@ -105,7 +107,8 @@ public class ProgrammingExerciseService {
             ParticipationRepository participationRepository, ResultRepository resultRepository, UserRepository userRepository, AuthorizationCheckService authCheckService,
             ResourceLoaderService resourceLoaderService, GroupNotificationService groupNotificationService, InstanceMessageSendService instanceMessageSendService,
             AuxiliaryRepositoryRepository auxiliaryRepositoryRepository, ProgrammingExerciseTaskRepository programmingExerciseTaskRepository,
-            ProgrammingExerciseSolutionEntryRepository programmingExerciseSolutionEntryRepository, ProgrammingExerciseTaskService programmingExerciseTaskService) {
+            ProgrammingExerciseSolutionEntryRepository programmingExerciseSolutionEntryRepository, ProgrammingExerciseTaskService programmingExerciseTaskService,
+            ProgrammingExerciseGitDiffReportRepository programmingExerciseGitDiffReportRepository) {
         this.programmingExerciseRepository = programmingExerciseRepository;
         this.fileService = fileService;
         this.gitService = gitService;
@@ -125,6 +128,7 @@ public class ProgrammingExerciseService {
         this.programmingExerciseTaskRepository = programmingExerciseTaskRepository;
         this.programmingExerciseSolutionEntryRepository = programmingExerciseSolutionEntryRepository;
         this.programmingExerciseTaskService = programmingExerciseTaskService;
+        this.programmingExerciseGitDiffReportRepository = programmingExerciseGitDiffReportRepository;
     }
 
     /**
@@ -148,12 +152,11 @@ public class ProgrammingExerciseService {
      *
      * @param programmingExercise The programmingExercise that should be setup
      * @return The new setup exercise
-     * @throws InterruptedException If something during the communication with the remote Git repository went wrong
      * @throws GitAPIException      If something during the communication with the remote Git repository went wrong
      * @throws IOException          If the template files couldn't be read
      */
     @Transactional // ok because we create many objects in a rather complex way and need a rollback in case of exceptions
-    public ProgrammingExercise createProgrammingExercise(ProgrammingExercise programmingExercise) throws InterruptedException, GitAPIException, IOException {
+    public ProgrammingExercise createProgrammingExercise(ProgrammingExercise programmingExercise) throws GitAPIException, IOException {
         programmingExercise.generateAndSetProjectKey();
         final User exerciseCreator = userRepository.getUser();
 
@@ -283,7 +286,7 @@ public class ProgrammingExerciseService {
      * @param programmingExercise the programming exercise that should be set up
      * @param exerciseCreator     the User that performed the action (used as Git commit author)
      */
-    private void setupExerciseTemplate(ProgrammingExercise programmingExercise, User exerciseCreator) throws GitAPIException, InterruptedException {
+    private void setupExerciseTemplate(ProgrammingExercise programmingExercise, User exerciseCreator) throws GitAPIException {
 
         // Get URLs for repos
         var exerciseRepoUrl = programmingExercise.getVcsTemplateRepositoryUrl();
@@ -368,9 +371,9 @@ public class ProgrammingExerciseService {
             // if any exception occurs, try to at least push an empty commit, so that the
             // repositories can be used by the build plans
             log.warn("An exception occurred while setting up the repositories", ex);
-            gitService.commitAndPush(exerciseRepo, "Empty Setup by Artemis", exerciseCreator);
-            gitService.commitAndPush(testRepo, "Empty Setup by Artemis", exerciseCreator);
-            gitService.commitAndPush(solutionRepo, "Empty Setup by Artemis", exerciseCreator);
+            gitService.commitAndPush(exerciseRepo, "Empty Setup by Artemis", true, exerciseCreator);
+            gitService.commitAndPush(testRepo, "Empty Setup by Artemis", true, exerciseCreator);
+            gitService.commitAndPush(solutionRepo, "Empty Setup by Artemis", true, exerciseCreator);
         }
     }
 
@@ -382,7 +385,7 @@ public class ProgrammingExerciseService {
         return "templates/" + programmingLanguage.name().toLowerCase();
     }
 
-    private void createRepositoriesForNewExercise(ProgrammingExercise programmingExercise) throws GitAPIException, InterruptedException {
+    private void createRepositoriesForNewExercise(ProgrammingExercise programmingExercise) throws GitAPIException {
         final String projectKey = programmingExercise.getProjectKey();
         versionControlService.get().createProjectForExercise(programmingExercise); // Create project
         versionControlService.get().createRepository(projectKey, programmingExercise.generateRepositoryName(RepositoryType.TEMPLATE), null); // Create template repository
@@ -393,13 +396,13 @@ public class ProgrammingExerciseService {
         createAndInitializeAuxiliaryRepositories(projectKey, programmingExercise);
     }
 
-    private void createAndInitializeAuxiliaryRepositories(String projectKey, ProgrammingExercise programmingExercise) throws GitAPIException, InterruptedException {
+    private void createAndInitializeAuxiliaryRepositories(String projectKey, ProgrammingExercise programmingExercise) throws GitAPIException {
         for (AuxiliaryRepository repo : programmingExercise.getAuxiliaryRepositories()) {
             String repositoryName = programmingExercise.generateRepositoryName(repo.getName());
             versionControlService.get().createRepository(projectKey, repositoryName, null);
             repo.setRepositoryUrl(versionControlService.get().getCloneRepositoryUrl(programmingExercise.getProjectKey(), repositoryName).toString());
             Repository vcsRepository = gitService.getOrCheckoutRepository(repo.getVcsRepositoryUrl(), true);
-            gitService.commitAndPush(vcsRepository, SETUP_COMMIT_MESSAGE, null);
+            gitService.commitAndPush(vcsRepository, SETUP_COMMIT_MESSAGE, true, null);
         }
     }
 
@@ -478,7 +481,7 @@ public class ProgrammingExerciseService {
             }
 
             replacePlaceholders(programmingExercise, repository);
-            commitAndPushRepository(repository, templateName + "-Template pushed by Artemis", user);
+            commitAndPushRepository(repository, templateName + "-Template pushed by Artemis", true, user);
         }
     }
 
@@ -501,15 +504,23 @@ public class ProgrammingExerciseService {
             // First get files that are not dependent on the project type
             String templatePath = getProgrammingLanguageTemplatePath(programmingExercise.getProgrammingLanguage()) + "/test";
 
-            String projectTemplatePath = templatePath + "/projectTemplate/**/*.*";
+            // Java both supports Gradle and Maven as a test template
+            String projectTemplatePath = templatePath;
+            ProjectType projectType = programmingExercise.getProjectType();
+            if (projectType != null && projectType.isGradle()) {
+                projectTemplatePath += "/gradle";
+            }
+            else {
+                projectTemplatePath += "/maven";
+            }
+            projectTemplatePath += "/projectTemplate/**/*.*";
             Resource[] projectTemplate = resourceLoaderService.getResources(projectTemplatePath);
-            fileService.copyResources(projectTemplate, prefix, repository.getLocalPath().toAbsolutePath().toString(), false);
+            // keep the folder structure
+            fileService.copyResources(projectTemplate, "projectTemplate", repository.getLocalPath().toAbsolutePath().toString(), true);
 
             // These resources might override the programming language dependent resources as they are project type dependent.
-            ProjectType projectType = programmingExercise.getProjectType();
             if (projectType != null) {
                 String projectTypeTemplatePath = getProgrammingLanguageProjectTypePath(programmingExercise.getProgrammingLanguage(), projectType) + "/test";
-
                 String projectTypeProjectTemplatePath = projectTypeTemplatePath + "/projectTemplate/**/*.*";
 
                 try {
@@ -522,18 +533,30 @@ public class ProgrammingExerciseService {
 
             Map<String, Boolean> sectionsMap = new HashMap<>();
 
-            // Keep or delete static code analysis configuration in pom.xml
+            // Keep or delete static code analysis configuration in the build configuration file
             sectionsMap.put("static-code-analysis", Boolean.TRUE.equals(programmingExercise.isStaticCodeAnalysisEnabled()));
+
+            // Keep or delete testwise coverage configuration in the build file
+            sectionsMap.put("record-testwise-coverage", Boolean.TRUE.equals(programmingExercise.isTestwiseCoverageEnabled()));
 
             if (!programmingExercise.hasSequentialTestRuns()) {
                 String testFilePath = templatePath + "/testFiles/**/*.*";
                 Resource[] testFileResources = resourceLoaderService.getResources(testFilePath);
-                String packagePath = Paths.get(repository.getLocalPath().toAbsolutePath().toString(), "test", "${packageNameFolder}").toAbsolutePath().toString();
+                String packagePath = Path.of(repository.getLocalPath().toAbsolutePath().toString(), "test", "${packageNameFolder}").toAbsolutePath().toString();
 
                 sectionsMap.put("non-sequential", true);
                 sectionsMap.put("sequential", false);
 
-                fileService.replacePlaceholderSections(Paths.get(repository.getLocalPath().toAbsolutePath().toString(), "pom.xml").toAbsolutePath().toString(), sectionsMap);
+                // replace placeholder settings in project file
+                String projectFileFileName;
+                if (projectType != null && projectType.isGradle()) {
+                    projectFileFileName = "build.gradle";
+                }
+                else {
+                    projectFileFileName = "pom.xml";
+                }
+                fileService.replacePlaceholderSections(Path.of(repository.getLocalPath().toAbsolutePath().toString(), projectFileFileName).toAbsolutePath().toString(),
+                        sectionsMap);
 
                 fileService.copyResources(testFileResources, prefix, packagePath, false);
 
@@ -566,36 +589,53 @@ public class ProgrammingExerciseService {
                 }
             }
             else {
-                String stagePomXmlPath = templatePath + "/stagePom.xml";
-                if (new java.io.File(projectTemplatePath + "/stagePom.xml").exists()) {
-                    stagePomXmlPath = projectTemplatePath + "/stagePom.xml";
+                // maven configuration should be set for kotlin and older exercises where no project type has been introduced where no project type is defined
+                boolean isMaven = projectType == null || projectType.isMaven();
+                sectionsMap.put("non-sequential", false);
+                sectionsMap.put("sequential", true);
+
+                String projectFileName;
+                if (isMaven) {
+                    projectFileName = "pom.xml";
                 }
-                Resource stagePomXml = resourceLoaderService.getResource(stagePomXmlPath);
+                else {
+                    projectFileName = "build.gradle";
+                }
+                fileService.replacePlaceholderSections(Path.of(repository.getLocalPath().toAbsolutePath().toString(), projectFileName).toAbsolutePath().toString(), sectionsMap);
+
+                // staging project files are only required for maven
+                Resource stagePomXml = null;
+                if (isMaven) {
+                    String stagePomXmlPath = templatePath + "/stagePom.xml";
+                    if (new java.io.File(projectTemplatePath + "/stagePom.xml").exists()) {
+                        stagePomXmlPath = projectTemplatePath + "/stagePom.xml";
+                    }
+                    stagePomXml = resourceLoaderService.getResource(stagePomXmlPath);
+                }
 
                 // This is done to prepare for a feature where instructors/tas can add multiple build stages.
                 List<String> sequentialTestTasks = new ArrayList<>();
                 sequentialTestTasks.add("structural");
                 sequentialTestTasks.add("behavior");
 
-                sectionsMap.put("non-sequential", false);
-                sectionsMap.put("sequential", true);
-
-                fileService.replacePlaceholderSections(Paths.get(repository.getLocalPath().toAbsolutePath().toString(), "pom.xml").toAbsolutePath().toString(), sectionsMap);
-
                 for (String buildStage : sequentialTestTasks) {
 
-                    Path buildStagePath = Paths.get(repository.getLocalPath().toAbsolutePath().toString(), buildStage);
+                    Path buildStagePath = Path.of(repository.getLocalPath().toAbsolutePath().toString(), buildStage);
                     Files.createDirectory(buildStagePath);
 
                     String buildStageResourcesPath = templatePath + "/testFiles/" + buildStage + "/**/*.*";
                     Resource[] buildStageResources = resourceLoaderService.getResources(buildStageResourcesPath);
 
-                    Files.createDirectory(Paths.get(buildStagePath.toAbsolutePath().toString(), "test"));
-                    Files.createDirectory(Paths.get(buildStagePath.toAbsolutePath().toString(), "test", "${packageNameFolder}"));
+                    Files.createDirectory(Path.of(buildStagePath.toAbsolutePath().toString(), "test"));
+                    Files.createDirectory(Path.of(buildStagePath.toAbsolutePath().toString(), "test", "${packageNameFolder}"));
 
-                    String packagePath = Paths.get(buildStagePath.toAbsolutePath().toString(), "test", "${packageNameFolder}").toAbsolutePath().toString();
+                    String packagePath = Path.of(buildStagePath.toAbsolutePath().toString(), "test", "${packageNameFolder}").toAbsolutePath().toString();
 
-                    Files.copy(stagePomXml.getInputStream(), Paths.get(buildStagePath.toAbsolutePath().toString(), "pom.xml"));
+                    // staging project files are only required for maven
+                    if (isMaven && stagePomXml != null) {
+                        Files.copy(stagePomXml.getInputStream(), buildStagePath.resolve("pom.xml"));
+                    }
+
                     fileService.copyResources(buildStageResources, prefix, packagePath, false);
 
                     // Possibly overwrite files if the project type is defined
@@ -612,7 +652,7 @@ public class ProgrammingExerciseService {
             }
 
             replacePlaceholders(programmingExercise, repository);
-            commitAndPushRepository(repository, templateName + "-Template pushed by Artemis", user);
+            commitAndPushRepository(repository, templateName + "-Template pushed by Artemis", true, user);
         }
         else {
             // If there is no special test structure for a programming language, just copy all the test files.
@@ -661,20 +701,21 @@ public class ProgrammingExerciseService {
         replacements.put("${exerciseName}", programmingExercise.getTitle());
         replacements.put("${studentWorkingDirectory}", Constants.STUDENT_WORKING_DIRECTORY);
         replacements.put("${packaging}", programmingExercise.hasSequentialTestRuns() ? "pom" : "jar");
-        fileService.replaceVariablesInFileRecursive(repository.getLocalPath().toAbsolutePath().toString(), replacements);
+        fileService.replaceVariablesInFileRecursive(repository.getLocalPath().toAbsolutePath().toString(), replacements, List.of("gradle-wrapper.jar"));
     }
 
     /**
      * Stage, commit and push.
      *
-     * @param repository The repository to which the changes should get pushed
-     * @param message    The commit message
-     * @param user       the user who has initiated the generation of the programming exercise
+     * @param repository  The repository to which the changes should get pushed
+     * @param message     The commit message
+     * @param emptyCommit whether an empty commit should be created or not
+     * @param user        the user who has initiated the generation of the programming exercise
      * @throws GitAPIException If committing, or pushing to the repo throws an exception
      */
-    public void commitAndPushRepository(Repository repository, String message, User user) throws GitAPIException {
+    public void commitAndPushRepository(Repository repository, String message, boolean emptyCommit, User user) throws GitAPIException {
         gitService.stageAllChanges(repository);
-        gitService.commitAndPush(repository, message, user);
+        gitService.commitAndPush(repository, message, emptyCommit, user);
         repository.setFiles(null); // Clear cache to avoid multiple commits when Artemis server is not restarted between attempts
     }
 
@@ -738,11 +779,10 @@ public class ProgrammingExerciseService {
      * @param user            The user who has initiated the action
      * @return True, if the structure oracle was successfully generated or updated, false if no changes to the file were made.
      * @throws IOException          If the URLs cannot be converted to actual {@link Path paths}
-     * @throws InterruptedException If the checkout fails
      * @throws GitAPIException      If the checkout fails
      */
     public boolean generateStructureOracleFile(VcsRepositoryUrl solutionRepoURL, VcsRepositoryUrl exerciseRepoURL, VcsRepositoryUrl testRepoURL, String testsPath, User user)
-            throws IOException, GitAPIException, InterruptedException {
+            throws IOException, GitAPIException {
         Repository solutionRepository = gitService.getOrCheckoutRepository(solutionRepoURL, true);
         Repository exerciseRepository = gitService.getOrCheckoutRepository(exerciseRepoURL, true);
         Repository testRepository = gitService.getOrCheckoutRepository(testRepoURL, true);
@@ -756,7 +796,7 @@ public class ProgrammingExerciseService {
 
         Path solutionRepositoryPath = solutionRepository.getLocalPath().toRealPath();
         Path exerciseRepositoryPath = exerciseRepository.getLocalPath().toRealPath();
-        Path structureOraclePath = Paths.get(testRepository.getLocalPath().toRealPath().toString(), testsPath, "test.json");
+        Path structureOraclePath = Path.of(testRepository.getLocalPath().toRealPath().toString(), testsPath, "test.json");
 
         String structureOracleJSON = OracleGenerator.generateStructureOracleJSON(solutionRepositoryPath, exerciseRepositoryPath);
         return saveAndPushStructuralOracle(user, testRepository, structureOraclePath, structureOracleJSON);
@@ -771,7 +811,7 @@ public class ProgrammingExerciseService {
             try {
                 Files.write(structureOraclePath, structureOracleJSON.getBytes());
                 gitService.stageAllChanges(testRepository);
-                gitService.commitAndPush(testRepository, "Generate the structure oracle file.", user);
+                gitService.commitAndPush(testRepository, "Generate the structure oracle file.", true, user);
                 return true;
             }
             catch (GitAPIException e) {
@@ -791,7 +831,7 @@ public class ProgrammingExerciseService {
                 try {
                     Files.write(structureOraclePath, structureOracleJSON.getBytes());
                     gitService.stageAllChanges(testRepository);
-                    gitService.commitAndPush(testRepository, "Update the structure oracle file.", user);
+                    gitService.commitAndPush(testRepository, "Update the structure oracle file.", true, user);
                     return true;
                 }
                 catch (GitAPIException e) {
@@ -868,6 +908,9 @@ public class ProgrammingExerciseService {
             gitService.deleteLocalRepository(testRepositoryUrlAsUrl);
         }
 
+        programmingExerciseGitDiffReportRepository.deleteByProgrammingExerciseId(programmingExerciseId);
+        programmingExercise.setGitDiffReport(null);
+
         SolutionProgrammingExerciseParticipation solutionProgrammingExerciseParticipation = programmingExercise.getSolutionParticipation();
         TemplateProgrammingExerciseParticipation templateProgrammingExerciseParticipation = programmingExercise.getTemplateParticipation();
         if (solutionProgrammingExerciseParticipation != null) {
@@ -900,7 +943,7 @@ public class ProgrammingExerciseService {
      * @return A wrapper object containing a list of all found exercises and the total number of pages
      */
     public SearchResultPageDTO<ProgrammingExercise> getAllOnPageWithSize(final PageableSearchDTO<String> search, final User user) {
-        final var pageable = PageUtil.createPageRequest(search);
+        final var pageable = PageUtil.createExercisePageRequest(search);
         final var searchTerm = search.getSearchTerm();
 
         final var exercisePage = authCheckService.isAdmin(user)
@@ -928,7 +971,8 @@ public class ProgrammingExerciseService {
             adminGroups.add(editorGroup);
         }
 
-        continuousIntegrationService.get().giveProjectPermissions(exercise.getProjectKey(), adminGroups, List.of(CIPermission.CREATE, CIPermission.READ, CIPermission.ADMIN));
+        continuousIntegrationService.get().giveProjectPermissions(exercise.getProjectKey(), adminGroups,
+                List.of(CIPermission.CREATE, CIPermission.READ, CIPermission.CREATEREPOSITORY, CIPermission.ADMIN));
         if (teachingAssistantGroup != null) {
             continuousIntegrationService.get().giveProjectPermissions(exercise.getProjectKey(), List.of(teachingAssistantGroup), List.of(CIPermission.READ));
         }
