@@ -5,11 +5,13 @@ import static org.springframework.test.web.client.match.MockRestRequestMatchers.
 import static org.springframework.test.web.client.response.MockRestResponseCreators.withStatus;
 
 import java.io.IOException;
-import java.net.*;
+import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.URL;
 import java.time.ZonedDateTime;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 import java.util.stream.Stream;
 
 import javax.validation.constraints.NotNull;
@@ -101,8 +103,8 @@ public class BambooRequestMockProvider {
     /**
      * This method mocks that the programming exercise with the same project name already exists (depending on the boolean input exists), based on the programming exercise title
      *
-     * @param exercise the programming exercise that might already exist
-     * @param exists   whether the programming exercise with the same title exists
+     * @param exercise   the programming exercise that might already exist
+     * @param exists     whether the programming exercise with the same title exists
      * @param shouldFail if the request to get latest project should fail
      * @throws IOException        an IO exception when reading test files
      * @throws URISyntaxException exceptions related to URI handling in test REST calls
@@ -152,12 +154,14 @@ public class BambooRequestMockProvider {
 
         final var instructorURI = buildGivePermissionsURIFor(projectKey, exercise.getCourseViaExerciseGroupOrCourseMember().getInstructorGroupName());
         mockServer.expect(requestTo(instructorURI)).andExpect(method(HttpMethod.PUT))
-                .andExpect(content().json(mapper.writeValueAsString(List.of("CREATE", "READ", "ADMINISTRATION")))).andRespond(withStatus(HttpStatus.NO_CONTENT));
+                .andExpect(content().json(mapper.writeValueAsString(List.of("CREATE", "READ", "CREATEREPOSITORY", "ADMINISTRATION"))))
+                .andRespond(withStatus(HttpStatus.NO_CONTENT));
 
         if (exercise.getCourseViaExerciseGroupOrCourseMember().getEditorGroupName() != null) {
             final var editorURI = buildGivePermissionsURIFor(projectKey, exercise.getCourseViaExerciseGroupOrCourseMember().getEditorGroupName());
             mockServer.expect(requestTo(editorURI)).andExpect(method(HttpMethod.PUT))
-                    .andExpect(content().json(mapper.writeValueAsString(List.of("CREATE", "READ", "ADMINISTRATION")))).andRespond(withStatus(HttpStatus.NO_CONTENT));
+                    .andExpect(content().json(mapper.writeValueAsString(List.of("CREATE", "READ", "CREATEREPOSITORY", "ADMINISTRATION"))))
+                    .andRespond(withStatus(HttpStatus.NO_CONTENT));
         }
 
         if (exercise.getCourseViaExerciseGroupOrCourseMember().getTeachingAssistantGroupName() != null) {
@@ -246,7 +250,7 @@ public class BambooRequestMockProvider {
     }
 
     public void mockUpdateRepository(String buildPlanKey, BambooRepositoryDTO bambooRepository, BitbucketRepositoryDTO bitbucketRepository,
-            ApplicationLinksDTO.ApplicationLinkDTO applicationLink) throws URISyntaxException {
+            ApplicationLinksDTO.ApplicationLinkDTO applicationLink, String defaultBranch) throws URISyntaxException {
         MultiValueMap<String, String> parameters = new LinkedMultiValueMap<>();
         parameters.add("planKey", buildPlanKey);
         parameters.add("selectedRepository", "com.atlassian.bamboo.plugins.stash.atlassian-bamboo-plugin-stash:stash-rep");
@@ -255,7 +259,7 @@ public class BambooRequestMockProvider {
         parameters.add("confirm", "true");
         parameters.add("save", "Save repository");
         parameters.add("bamboo.successReturnMode", "json");
-        parameters.add("repository.stash.branch", "master");
+        parameters.add("repository.stash.branch", defaultBranch);
         parameters.add("repository.stash.repositoryId", bitbucketRepository.getId());
         parameters.add("repository.stash.repositorySlug", bitbucketRepository.getSlug());
         parameters.add("repository.stash.projectKey", bitbucketRepository.getProject().getKey());
@@ -266,8 +270,7 @@ public class BambooRequestMockProvider {
         mockServer.expect(requestTo(uri)).andExpect(method(HttpMethod.POST)).andRespond(withStatus(HttpStatus.OK));
     }
 
-    public void mockUpdatePlanRepository(String buildProjectKey, String buildPlanKey, String ciRepoName, String repoProjectKey, String newRepoUrl, String existingRepoUrl,
-            Optional<List<String>> optionalTriggeredByRepositories) throws URISyntaxException, IOException {
+    public void mockUpdatePlanRepository(String buildPlanKey, String ciRepoName, String repoProjectKey, String defaultBranch) throws URISyntaxException, IOException {
         mockGetBuildPlanRepositoryList(buildPlanKey);
 
         bitbucketRequestMockProvider.mockGetBitbucketRepository(repoProjectKey, buildPlanKey.toLowerCase());
@@ -279,7 +282,7 @@ public class BambooRequestMockProvider {
         mockGetApplicationLinks(applicationLinksToBeReturned);
         var applicationLink = applicationLinksToBeReturned.getApplicationLinks().get(0);
 
-        mockUpdateRepository(buildPlanKey, bambooRepository, bitbucketRepository, applicationLink);
+        mockUpdateRepository(buildPlanKey, bambooRepository, bitbucketRepository, applicationLink, defaultBranch);
     }
 
     public ApplicationLinksDTO createApplicationLink() {
@@ -329,11 +332,11 @@ public class BambooRequestMockProvider {
     /**
      * This method mocks that the artifact page the latest build result is empty
      */
-    public void mockRetrieveEmptyArtifactPage() throws URISyntaxException, MalformedURLException {
+    public void mockRetrieveEmptyArtifactPage() throws URISyntaxException {
         var indexOfResponse = "href=\"/download/1\"";
         var noArtifactsResponse = "";
-        final var uri = new URL(bambooServerUrl + "/download/").toURI();
-        final var uri2 = new URL(bambooServerUrl + "/download/1").toURI();
+        final var uri = new URI(bambooServerUrl + "/download/");
+        final var uri2 = new URI(bambooServerUrl + "/download/1");
 
         mockServer.expect(requestTo(uri)).andExpect(method(HttpMethod.GET)).andRespond(withStatus(HttpStatus.OK).contentType(MediaType.TEXT_HTML).body(indexOfResponse));
         mockServer.expect(requestTo(uri2)).andExpect(method(HttpMethod.GET))
