@@ -1,12 +1,10 @@
 package de.tum.in.www1.artemis.util;
 
 import java.io.*;
-import java.net.MalformedURLException;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collection;
 
 import org.apache.commons.io.FileUtils;
@@ -15,6 +13,7 @@ import org.eclipse.jgit.api.errors.GitAPIException;
 import org.eclipse.jgit.lib.ReflogEntry;
 import org.eclipse.jgit.revwalk.RevCommit;
 import org.eclipse.jgit.storage.file.FileRepositoryBuilder;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
 import de.tum.in.www1.artemis.domain.Repository;
@@ -23,8 +22,11 @@ import de.tum.in.www1.artemis.domain.VcsRepositoryUrl;
 @Service
 public class GitUtilService {
 
+    @Value("${artemis.version-control.default-branch:main}")
+    private String defaultBranch;
+
     // Note: the first string has to be same as artemis.repo-clone-path (see src/test/resources/config/application-artemis.yml) because here local git repos will be cloned
-    private final Path localPath = Paths.get("./repos/server-integration-test").resolve("test-repository").normalize();
+    private final Path localPath = Path.of(".", "repos", "server-integration-test").resolve("test-repository").normalize();
 
     private final Path remotePath = Files.createTempDirectory("remotegittest").resolve("scm/test-repository");
 
@@ -51,7 +53,7 @@ public class GitUtilService {
      * Initializes the repository with three dummy files
      */
     public void initRepo() {
-        initRepo("main");
+        initRepo(defaultBranch);
     }
 
     /**
@@ -62,7 +64,7 @@ public class GitUtilService {
         try {
             deleteRepos();
 
-            remoteGit = Git.init().setInitialBranch(defaultBranch).setDirectory(remotePath.toFile()).call();
+            remoteGit = LocalRepository.initialize(remotePath.toFile(), defaultBranch);
             // create some files in the remote repository
             remotePath.resolve(FILES.FILE1.toString()).toFile().createNewFile();
             remotePath.resolve(FILES.FILE2.toString()).toFile().createNewFile();
@@ -150,7 +152,7 @@ public class GitUtilService {
 
     public void updateFile(REPOS repo, FILES fileToUpdate, String content) {
         try {
-            var fileName = Paths.get(getCompleteRepoPathStringByType(repo), fileToUpdate.toString()).toString();
+            var fileName = Path.of(getCompleteRepoPathStringByType(repo), fileToUpdate.toString()).toString();
             PrintWriter writer = new PrintWriter(fileName, StandardCharsets.UTF_8);
             writer.print(content);
             writer.close();
@@ -160,13 +162,13 @@ public class GitUtilService {
     }
 
     public File getFile(REPOS repo, FILES fileToRead) {
-        Path path = Paths.get(getCompleteRepoPathStringByType(repo), fileToRead.toString());
+        Path path = Path.of(getCompleteRepoPathStringByType(repo), fileToRead.toString());
         return path.toFile();
     }
 
     public String getFileContent(REPOS repo, FILES fileToRead) {
         try {
-            Path path = Paths.get(getCompleteRepoPathStringByType(repo), fileToRead.toString());
+            Path path = Path.of(getCompleteRepoPathStringByType(repo), fileToRead.toString());
             byte[] encoded = Files.readAllBytes(path);
             return new String(encoded, Charset.defaultCharset());
         }
@@ -239,18 +241,13 @@ public class GitUtilService {
     }
 
     public VcsRepositoryUrl getRepoUrlByType(REPOS repo) {
-        try {
-            return new VcsRepositoryUrl("file://" + getCompleteRepoPathStringByType(repo));
-        }
-        catch (MalformedURLException ignored) {
-        }
-        return null;
+        return new VcsRepositoryUrl(new File(getCompleteRepoPathStringByType(repo)));
     }
 
     public static final class MockFileRepositoryUrl extends VcsRepositoryUrl {
 
-        public MockFileRepositoryUrl(File file) throws MalformedURLException {
-            super(file.toURI().toURL().toString());
+        public MockFileRepositoryUrl(File file) {
+            super(file);
         }
 
         @Override
@@ -258,6 +255,7 @@ public class GitUtilService {
             // the mocked url should already include the user specific part
             return this;
         }
+
     }
 
     public void writeEmptyJsonFileToPath(Path path) throws Exception {
